apps/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: nginx
        image: nginx:placeholder
        volumeMounts:
        - name: content
          mountPath: /usr/share/nginx/html
          readOnly: true
        resources:
          limits:
            cpu: 0.2m
            memory: 20Mi
      volumes:
      - name: content
        configMap:
          name: index-html-content
