apps/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: demo-app
  ports:
  - port: 80
    targetPort: 80
